# CompressGraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: filesystem.hpp  io.hpp  util.hpp
core/compression/: array.cc  basics.h  hash.cc  heap.cc  records.cc
script/: compress.sh  data_prepare.sh  data_prepare_gpu.sh  filter.sh
script/cpu/: bfs.sh  cc.sh  hits.sh  pagerank.sh  sssp.sh  topo.sh
script/gpu/: bfs.sh  cc.sh  hits.sh  pagerank.sh  sssp.sh  topo.sh
src/: compress.cpp  filter.cpp  filter_decomp.cpp
src/apps_gunrock/: CMakeLists.txt  bfs.cu  bfs.hxx  cc.cu  cc.hxx  hits.cu  hits.hxx  pagerank.cu  pr.hxx  sssp.cu  sssp.hxx  topo.cu  topo.hxx
src/apps_ligra/: CMakeLists.txt  bfs.cpp  cc.cpp  hits.cpp  pagerank.cpp  sssp.cpp  topo.cpp
utils/: CMakeLists.txt  adj2csr.cpp  convert2binary.cpp  convert2gunrock.cpp  convert2ligra.cpp  edgelist2csr.cpp  gene_rule_order.cpp  save_degree.cpp
